project('xtl', 'cpp', version:'0.6.3', license:'BSD-3-Clause', default_options : ['warning_level=3', 'cpp_std=c++14'])

xtl_dep = declare_dependency(include_directories:include_directories('include', is_system: true))

install_headers(
    'include/xtl/xany.hpp',
    'include/xtl/xbase64.hpp',
    'include/xtl/xbasic_fixed_string.hpp',
    'include/xtl/xclosure.hpp',
    'include/xtl/xcomplex.hpp',
    'include/xtl/xcomplex_sequence.hpp',
    'include/xtl/xdynamic_bitset.hpp',
    'include/xtl/xfunctional.hpp',
    'include/xtl/xhash.hpp',
    'include/xtl/xhierarchy_generator.hpp',
    'include/xtl/xiterator_base.hpp',
    'include/xtl/xjson.hpp',
    'include/xtl/xmasked_value.hpp',
    'include/xtl/xmasked_value_meta.hpp',
    'include/xtl/xmeta_utils.hpp',
    'include/xtl/xoptional.hpp',
    'include/xtl/xoptional_meta.hpp',
    'include/xtl/xoptional_sequence.hpp',
    'include/xtl/xproxy_wrapper.hpp',
    'include/xtl/xsequence.hpp',
    'include/xtl/xspan.hpp',
    'include/xtl/xspan_impl.hpp',
    'include/xtl/xtl_config.hpp',
    'include/xtl/xtype_traits.hpp',
    'include/xtl/xvariant.hpp',
    'include/xtl/xvariant_impl.hpp',
    subdir: 'xtl')
